[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/HUB.gd" type="Script" id=1]
[ext_resource path="res://Sound/game_over.mp3" type="AudioStream" id=2]
[ext_resource path="res://Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 3 )

[node name="HUB" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.0
margin_top = 10.0
margin_right = 86.0
margin_bottom = 16.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScoreContainer"]
margin_left = 60.0
margin_right = 100.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 1 )
text = "Score"

[node name="Score" type="Label" parent="ScoreContainer"]
margin_left = 104.0
margin_right = 112.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="GameOverContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -20.0
margin_right = 64.0
margin_bottom = 20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverContainer"]
margin_top = 4.0
margin_right = 128.0
margin_bottom = 12.0
alignment = 1

[node name="Label" type="Label" parent="GameOverContainer/HBoxContainer"]
margin_left = 18.0
margin_right = 98.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 3 )
text = "Game Over!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="GameOverContainer/HBoxContainer"]
margin_left = 102.0
margin_right = 110.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Retry" type="Label" parent="GameOverContainer"]
margin_top = 16.0
margin_right = 128.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
text = "Press R to retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Label" parent="GameOverContainer"]
visible = false
margin_top = 28.0
margin_right = 128.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 5 )
text = "Press Q to exit"

[node name="GameOverAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 3.0
